# akamai-api

./: .gitignore  README.md  pyproject.toml
akamai_api/: __init__.py  cli.py  core.py
