[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akamai_api"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
description = "Utilities to detect and analyze Akamai CDN usage and integrate with Akamai APIs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "ipwhois",
  "dnspython",
  "pywhois",
  "edgegrid-python",
  "python-whois"
]